# oh_my_verification_code

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  当前不足.md
plugin/: LICENSE  README.md  pyproject.toml
plugin/.claude-plugin/: plugin.json
plugin/schemas/v1/: captcha-action-plan-v1.schema.json  captcha-authorization-v1.schema.json  captcha-business-acceptance-receipt-v1.schema.json  captcha-calibration-v1.schema.json  captcha-classification-request-v1.schema.json  captcha-classification-v1.schema.json  captcha-execution-receipt-v1.schema.json  captcha-plan-action-request-v1.schema.json  captcha-prediction-v1.schema.json  captcha-promotion-decision-v1.schema.json  captcha-provider-verification-receipt-v1.schema.json  captcha-registry-entry-v1.schema.json  captcha-result-v1.schema.json  captcha-solve-request-v1.schema.json
plugin/skills/captcha-action-validation/: SKILL.md  manifest.json
plugin/skills/captcha-adapter-scaffolding/: SKILL.md  manifest.json
plugin/skills/captcha-authorized-flow/: SKILL.md  manifest.json
plugin/skills/captcha-model-lifecycle/: SKILL.md  manifest.json
plugin/skills/captcha-provider-diagnostics/: SKILL.md  manifest.json
plugin/skills/captcha-solver-core/: SKILL.md  manifest.json
plugin/src/captcha_verification/: __init__.py  canonical.py  classification.py  cli.py  fixtures.py  policy.py  raster.py  runtime.py  (+1 more)
plugin/tests/: test_agent_runtime.py  test_captcha_model_train.py  test_cli.py  test_contracts.py  test_fastapi_adapter.py  test_mcp_adapter.py  test_reference_runtime.py  test_scaffold.py  test_skill_packages.py  test_solver_action_boundaries.py
(+1036 files in other folders)
